# stash-mcp

./: .env.example  .gitignore  Cargo.toml  MAJOR.md  README.md  justfile
src/: config.rs  error.rs  integration_tests.rs  main.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs
src/stash/: client.rs  filters.rs  mod.rs  queries.rs  types.rs
