[package]
name = "stash-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for StashApp - single binary, reads a key=value env config file"
license = "GPL-3.0-only"

[[bin]]
name = "stash-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "2.2", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
